src/main/resources/static/css/newstyle.css
body{
    background-color: #353d3f;
    color: #FFDC5E;
}
.seat-format main{
    background-color: #353d3f;
    display:flex;
    flex-direction:column;
    align-items:center;
    justify-content:center;
    height: 100vh;
    width:100vw;
    margin:0;
}

.buttonColor{
    background-color:#59A5D8;
    color:white;
    border-color:#989898;
}
.buttonColor:hover{
    background-color:#989898;
    border-color:#FE5F55;
}



.container{
    margin-bottom:25px;
}
h1, h2, h3, h4, h5, h6 {
    font-family: 'Corben', Georgia, Times, serif;
}
p, div {
    font-family: 'Nobile', Helvetica, Arial, sans-serif;
}


.seat{
    background-color:white;
    height:24px;
    width:30px;
    margin:3px;
    border-top-left-radius:12px;
    border-top-right-radius:12px;
}

.seat.reserved{
    background-color:grey;
}
.seat.selected{
    background-color:darkseagreen;
}

.seat:nth-of-type(2){
    margin-right:18px;
}
.seat:nth-last-of-type(2){
    margin-left:18px;
}
.seat:not(.reserved):hover{
    cursor:pointer;
    transform:scale(1.2);
    background-color:darkseagreen;
}
.theatre .seat.reserved:hover{
    cursor:default;
    transform:scale(1);
}
.theatre{
    background:rgba(0,0,0,0.1);
    padding:5px 10px;
    border-radius:5px;
    color:#777;
    list-style-type:none;
    display:flex;
    justify-content: space-between;
}

.theatre li{
    display:flex;
    align-items:center;
    justify-content:center;
    margin:0 10px;
}
.showcase li small{
    margin-left:2px;
}
.row{
    display:flex;
}

.theatreScreen{
    background-color:white;
    transform:rotateX(-45deg);
    box-shadow: 0 3px 10px rgba(255,255,255,0.7);
    height:200px;
    width:100%;
    margin:15px 0;
}

